2005-12-16 Jochen
 BUG: [ 1382021 ] Merge7z432 missing?
  Merge7z new files: Merge7z431.dsp Merge7z432.dsp

2005-12-15 Perry
 PATCH: [ 1188787 ] New Chinese translation rc file (from PATCH 1183476)
  Some more synchronizing from submitted patch
  Src/Languages/ChineseTraditional: MergeChineseTraditional.rc
 PATCH: [ 1379226 ] Fix Display Plugins BuildTmp paths
  (See plugins)  
 PATCH: [ 1188787 ] New Chinese translation rc file (from PATCH 1183476)
  Last updates from submitted patch
  Src/Languages/ChineseTraditional: MergeChineseTraditional.rc
 BUG: [ 1381879 ] Unused variable in unicoder.cpp
  Src/common: unicoder.cpp

2005-12-14 Perry
 Update & synchronize translations: ChineseTraditional Czech Danish Dutch
  Src/Languages:
  ChineseTraditional: MergeChineseTraditional.rc
  Czech: MergeCzech.rc
  Danish: MergeDanish.rc
  Dutch: MergeDutch.rc
 Update & synchronize translations: French German Hungarian Italian Japanese
  Src/Languages:
  French: MergeFrench.rc
  German: MergeGerman.rc
  Hungarian: MergeHungarian.rc
  Italian: MergeItalian.rc
  Japanese: MergeJapanese.rc

2005-12-13 Perry
 PATCH: [ 1379894 ] Fix handling of unknown encoding
  Src: MainFrm.cpp
  Src/Common: unicoder.cpp
 Update & synchronize translations: Brazilian Bulgarian Catalan ChineseSimplified
  Src/Languages:
  Brazilian: MergeBrazilian.rc
  Bulgarian: MergeBulgarian.rc
  Catalan: MergeCatalan.rc
  ChineseSimplified: MergeChineseSimplified.rc

2005-12-13 Kimmo
 PATCH: [ 1378174 ] Share Src/res between translations
  Src/Languages: *.rc
  Src/Languages/res: removed .bmp .cur and .ico files and WinMergeSplash.psd
   splash1.bmp and splash WinMergeSplash.psd not removed from Catalan

2005-12-13 Perry
 PATCH: [ 1377545 ] Remove needless casts

2005-12-11 Perry
 PATCH: [ 1372549 ] readme for Merge7z distributables
  Merge7z: readme.txt

2005-12-11 Kimmo
 PATCH: [ 1371994 ] Enable hi-color icons for folder compare
  Icons from Tim (Thanks!)